[package]
name = "torrent-rs"
version = "0.0.1"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2018"


[dependencies]
async-std = { version = "1.6.1", features = ["attributes"] }
serde_bencode = "^0.2.1"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.10.0"
byteorder = "1.3.4"
rand = "0.7"
sha-1 = "0.9.0"
